update alignment,color,background color

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prathmesh Home Page</title>
 </head>
-<body bgcolor="black">
+<body bgcolor="pink">
     <h1 align="center">Welcome to Amrutvahini college of Engineering</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus asperiores exercitationem quod sint earum aperiam voluptatem incidunt architecto laudantium numquam optio magni, quae maxime quas, fugiat totam! Adipisci, fuga quod!</p>
 </body>
