--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body bgcolor="pink">
     <h1 align="center">Welcome to Amrutvahini college of Engineering</h1>
+    <h3 color="blue" align="center"bgcolor="yellow">Prathmesh</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus asperiores exercitationem quod sint earum aperiam voluptatem incidunt architecto laudantium numquam optio magni, quae maxime quas, fugiat totam! Adipisci, fuga quod!</p>
 </body>
 </html>
